# I-SPLIT

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml
configs/: base.yaml  full.yaml  pilot.yaml
scripts/: download_data.py  extract_features.py  fit_subspaces.py  make_paper_tables.py  materialize_vctk_hf.py  run_claim2_pareto.py  run_interchange_eval.py  run_theory_validation.py
src/isplit/: __init__.py
src/isplit/causal/: entanglement.py  interchange.py  metrics.py
src/isplit/config/: loader.py  schema.py
src/isplit/data/: acquisition.py  augment.py  io.py  manifest.py  pairs.py  requests.py
src/isplit/encoders/: cache.py  extract.py  registry.py
src/isplit/eval/: ablations.py  layerwise_audit.py  pareto.py  probe_vs_intervention.py  robustness.py
src/isplit/probes/: ctc_head.py  linear.py  mlp.py
src/isplit/subspace/: baselines.py  intervention_covariance.py  pipeline.py  projection.py
src/isplit/theory/: synthetic.py  validate_propositions.py
src/isplit/utils/: linalg.py  logging.py  seeding.py
tests/causal/: test_entanglement.py  test_interchange.py  test_metrics.py
tests/config/: test_loader.py
tests/data/: test_augment.py  test_manifest.py  test_pairs.py  test_requests.py
tests/encoders/: test_cache.py
tests/eval/: test_ablations.py  test_pareto.py  test_probe_vs_intervention.py  test_robustness.py
tests/probes/: test_ctc_head.py  test_linear.py  test_mlp.py
tests/subspace/: test_baselines.py  test_intervention_covariance.py  test_projection.py
tests/theory/: test_synthetic.py  test_validate_propositions.py
